added redirecting logic

--- a/src/AzureResourceManager/appsettings.json
+++ b/src/AzureResourceManager/appsettings.json
@@ -6,5 +6,17 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "AzureAD": {
+    "ClientId": "bc92d24f-6bfd-46a8-82dc-16180dff0a83",
+    "ClientSecret": "bFlqpJW8/FpgXGlhzalrs5UJqc+JF6tx/OLmtXtjW0w=",
+    "RedirectUri": "http://localhost:19688/",
+    "Authority": "https://login.windows.net/{0}/",
+    "ResourceManagerIdentifier": "https://management.core.windows.net/",
+    "ARMAuthorizationPermissionsAPIVersion": "2015-07-01",
+    "ResourceManagerUrl": "https://management.azure.com",
+    "RequiredARMRoleOnSubscription": "Owner",
+    "ARMAuthorizationRoleAssignmentsAPIVersion": "2015-07-01",
+    "ARMAuthorizationRoleDefinitionsAPIVersion": "2015-07-01"
   }
 }
