--- a/src/AzureResourceManager/appsettings.json
+++ b/src/AzureResourceManager/appsettings.json
@@ -15,8 +15,11 @@
     "ResourceManagerIdentifier": "https://management.core.windows.net/",
     "ARMAuthorizationPermissionsAPIVersion": "2015-07-01",
     "ResourceManagerUrl": "https://management.azure.com",
-    "RequiredARMRoleOnSubscription": "Owner",
+    "RequiredARMRoleOnSubscription": "Reader",
     "ARMAuthorizationRoleAssignmentsAPIVersion": "2015-07-01",
-    "ARMAuthorizationRoleDefinitionsAPIVersion": "2015-07-01"
+    "ARMAuthorizationRoleDefinitionsAPIVersion": "2015-07-01",
+    "TokenStorageConnectionString": "UseDevelopmentStorage=true",
+    "GraphAPIIdentifier": "https://graph.windows.net/",
+    "GraphAPIVersion": "1.6"
   }
 }
