--- a/src/AzureResourceManager/appsettings.json
+++ b/src/AzureResourceManager/appsettings.json
@@ -8,9 +8,9 @@
     }
   },
   "AzureAD": {
-    "ClientId": "bc92d24f-6bfd-46a8-82dc-16180dff0a83",
-    "ClientSecret": "bFlqpJW8/FpgXGlhzalrs5UJqc+JF6tx/OLmtXtjW0w=",
-    "RedirectUri": "http://localhost:19688/",
+    "ClientId": "<<Put in the Multi-tenant AzureAD Application Id >>",
+    "ClientSecret": "<<Put in the Client secret for above application Id>>",
+    "RedirectUri": "<<Uri added as reply address in the Azure AD application>>",
     "Authority": "https://login.windows.net/{0}/",
     "ResourceManagerIdentifier": "https://management.core.windows.net/",
     "ARMAuthorizationPermissionsAPIVersion": "2015-07-01",
